# RustyTutors

./: Cargo.toml  README.md
tutor-db/: Cargo.toml
tutor-db/src/: database.sql
tutor-db/src/iter2/: handlers.rs  models.rs  routes.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs  routes.rs  state.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs  routes.rs  state.rs
tutor-db/src/iter5/: errors.rs  routes.rs
tutor-db/src/iter5/dbaccess/: course.rs
tutor-db/src/iter5/dbscripts/: course.rs  course.sql
tutor-db/src/iter5/handlers/: course.rs  general.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  routes.rs  state.rs
